force-app/main/default/objects/ghgpa_GHG_Project__c/ghgpa_GHG_Project__c.object-meta.xml
<CustomObject>
    <label>GHG Project</label>
    <nameField>
        <label>GHG Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GHG Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>