force-app/main/default/objects/ghgpa_GHG_Project__c/fields/Accounting_Stage__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Stage__c</fullName>
    <label>Accounting Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Define Assessment Boundary</fullName>
                <default>true</default>
                <label>Define Assessment Boundary</label>
            </value>
            <value>
                <fullName>Select Baseline Procedure</fullName>
            </value>
            <value>
                <fullName>Identify Baseline Candidates</fullName>
            </value>
            <value>
                <fullName>Estimate Baseline Emissions</fullName>
            </value>
            <value>
                <fullName>Monitor GHG Reductions</fullName>
            </value>
            <value>
                <fullName>Report GHG Reductions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>