force-app/main/default/objects/ghgpa_GHG_Project__c/fields/Baseline_GHG__c.field-meta.xml
<CustomField>
    <fullName>Baseline_GHG__c</fullName>
    <label>Baseline GHG</label>
    <summarizedField>ghgpa_Project_Activity__c.Baseline_GHG__c</summarizedField>
    <summaryForeignKey>ghgpa_Project_Activity__c.GHG_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>