force-app/main/default/objects/ghgpa_GHG_Project__c/fields/Estimated_GHG_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Estimated_GHG_Reduction__c</fullName>
    <label>Estimated GHG Reduction</label>
    <summarizedField>ghgpa_Project_Activity__c.Estimated_Reductions__c</summarizedField>
    <summaryForeignKey>ghgpa_Project_Activity__c.GHG_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>