force-app/main/default/objects/ghgpa_GHG_Project__c/fields/Measured_GHG_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Measured_GHG_Reduction__c</fullName>
    <label>Measured GHG Reduction</label>
    <summarizedField>ghgpa_Project_Activity__c.Measured_Reduction__c</summarizedField>
    <summaryForeignKey>ghgpa_Project_Activity__c.GHG_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>