force-app/main/default/objects/ghgpa_GHG_Project__c/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <formula>IF (
	YEAR(Project_End__c)=YEAR(Project_Start__c), 
		MONTH(Project_End__c)-MONTH(Project_Start__c)+1
		,
		(
			((YEAR(Project_End__c)-YEAR(Project_Start__c)-1)*12)
			+ (13 - MONTH(Project_Start__c)) 
			+ MONTH(Project_End__c)
		)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>